carrusel sin correccion de tamaños

--- a/Views/Equipo/List.cshtml
+++ b/Views/Equipo/List.cshtml
@@ -56,7 +56,7 @@
             </td>
             <td>
                     @Html.ActionLink("Edit", "EditarEquipo", new {id=item.Id  },new{ @class = "btn btn-success"})|
-                    @Html.ActionLink("Details", "Details", new { },new { @class = "btn btn-info" }) |
+                    @Html.ActionLink("Ver Informacion Equipo", "Details", new { },new { @class = "btn btn-info" }) |
                     @Html.ActionLink("Delete", "Delete", new { }, new { @class = "btn btn-danger" })
             </td>
         </tr>
