--- a/Views/Equipo/EditarEquipo.cshtml
+++ b/Views/Equipo/EditarEquipo.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditarEquipos">
+        <form asp-action="EditarEquipos" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Totalpuntos" class="control-label"></label>
-                <input asp-for="Totalpuntos" class="form-control" />
+                <input asp-for="Totalpuntos" class="form-control" readonly="readonly" />
                 <span asp-validation-for="Totalpuntos" class="text-danger"></span>
             </div>
             <div class="form-group">
