--- a/Views/Equipo/EditarEquipo.cshtml
+++ b/Views/Equipo/EditarEquipo.cshtml
@@ -45,14 +45,14 @@
                 <span asp-validation-for="Totalpuntos" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" asp-controller= "Equipo" asp-action="EditarEquipoP"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller= "Home" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
